[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-tool"
version = "0.1.0"
description = "源码备份工具"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0"]

[project.scripts]
copy-tool = "copy_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

